Users Table added + + functional buttons “Update”, “Delete”, “Add user” Fixed sidebar display conditions Fixed permission to edit user role /project_list page added /home page changed, temporary information has been added

--- a/flask_task/templates/account.html
+++ b/flask_task/templates/account.html
@@ -12,10 +12,17 @@
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Account Info</legend>
+                {% if current_user.role_id == 1: %}
+                    <div class="form-group">
+                        {{ form.role_id.label(class="form-control-label") }}
+                        {{ form.role_id(class="form-control form-control-lg") }}
+                    </div>
+                {% else %}
                 <div class="form-group">
-                    {{ form.role_id.label(class="form-control-label") }}
-                    {{ form.role_id(class="form-control form-control-lg") }}
-                </div>
+                        {{ form.role_id.label(class="form-control-label") }}:
+                        {{ current_user.roles.role }}
+                    </div>
+                {% endif %}
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
 
