--- a/flask_task/templates/add_user.html
+++ b/flask_task/templates/add_user.html
@@ -4,7 +4,11 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Now</legend>
+                <legend class="border-bottom mb-4">New  User</legend>
+                <div class="form-group">
+                    {{ form.role_id.label(class="form-control-label") }}
+                    {{ form.role_id(class="form-control form-control-lg") }}
+                </div>
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
 
