--- a/flask_task/templates/project_list.html
+++ b/flask_task/templates/project_list.html
@@ -1,5 +1,27 @@
 {% extends "layout.html" %}
 {% block content %}
+    <form method="POST" action="">
+        <fieldset class="form-group">
+            <div class="form-group">
+                {{ form.page_number.label(class="form-control-label") }}
+                {% if form.page_number.errors %}
+                    {{ form.page_number(class="form-control form-control-sm is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.page_number.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                {% else %}
+                    {{ form.page_number(class="form-control form-control-sm", style="width:fit-content;" ) }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info btn-sm") }}
+            </div>
+        </fieldset>
+    </form>
+
+
     {% for project in projects.items %}
         <project class="media content-section">
           <div class="media-body">
