--- a/flask_task/templates/project_list.html
+++ b/flask_task/templates/project_list.html
@@ -12,7 +12,7 @@
                             {% endfor %}
                         </div>
                 {% else %}
-                    {{ form.page_number(class="form-control form-control-sm", style="width:fit-content;" ) }}
+                    {{ form.page_number(class="form-control form-control-sm", style="width:fit-content;") }}
                 {% endif %}
             </div>
             <div class="form-group">
@@ -21,6 +21,16 @@
         </fieldset>
     </form>
 
+    <form method="GET" action="">
+        <fieldset class="form-group">
+            <div class="form-group">
+                <input class="form-control form-control-sm" style="width:fit-content;" type="search" placeholder="Search" aria-label="Search" name="search_query">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-outline-info btn-sm" type="submit">Search</button>
+            </div>
+        </fieldset>
+    </form>
 
     {% for project in projects.items %}
         <project class="media content-section">
