--- a/flask_task/templates/project_list.html
+++ b/flask_task/templates/project_list.html
@@ -16,27 +16,17 @@
                 {% endif %}
             </div>
         </fieldset>
-    </form>
-    <script>
-        let page_number_select = document.getElementById('page_number')
-
-        page_number_select.onchange = function() {
-            page_number = page_number_select.value;
-
-            fetch(
-        }
-    </script>
-
-    <form method="GET" action="">
         <fieldset class="form-group">
             <div class="form-group">
-                {{ form2.searched(class="form-control form-control-sm", style="width:fit-content;", type="search", placeholder="Search") }}
+                {{ form.searched(class="form-control form-control-sm", style="width:fit-content;", type="search", placeholder="Search") }}
             </div>
             <div class="form-group">
-                {{ form2.submit(class="btn btn-outline-info btn-sm") }}
+                {{ form.search_submit(class="btn btn-outline-info btn-sm") }}
             </div>
         </fieldset>
     </form>
+
+    <a class="btn btn-secondary btn-sm mt-0 mb-4" href="{{ url_for('projects.new_project') }}">Create Project</a>
 
     {% for project in projects.items %}
         <project class="media content-section">
@@ -56,9 +46,9 @@
     {% for page_num in projects.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
         {% if page_num %}
             {% if projects.page == page_num %}
-                <a class="btn btn-info mb-4" href="{{ url_for('projects.project_list', page=page_num, page_number=form.page_number.data, searched=form2.searched.data) }}"> {{ page_num }}</a>
+                <a class="btn btn-info mb-4" href="{{ url_for('projects.project_list', page=page_num, page_number=form.page_number.data, searched=form.searched.data) }}"> {{ page_num }}</a>
             {% else %}
-                <a class="btn btn-outline-info mb-4" href="{{ url_for('projects.project_list', page=page_num, page_number=form.page_number.data, searched=form2.searched.data) }}"> {{ page_num }}</a>
+                <a class="btn btn-outline-info mb-4" href="{{ url_for('projects.project_list', page=page_num, page_number=form.page_number.data, searched=form.searched.data) }}"> {{ page_num }}</a>
             {% endif %}
         {% else %}
             ...
