--- a/flask_task/templates/project_list.html
+++ b/flask_task/templates/project_list.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+    <h1>All Projects</h1>
     <form method="POST" action=" ">
         <fieldset class="form-group">
             <div class="form-group">
