--- a/flask_task/templates/project_list.html
+++ b/flask_task/templates/project_list.html
@@ -2,6 +2,7 @@
 {% block content %}
     <h1>All Projects</h1>
     <form method="POST" action=" ">
+        {{ form.hidden_tag() }}
         <fieldset class="form-group">
             <div class="form-group">
                 {{ form.page_number.label(class="form-control-label") }}
