Dummy data generator added

--- a/flask_task/templates/home.html
+++ b/flask_task/templates/home.html
@@ -29,4 +29,6 @@
         </div>
 </div>
 
+<p><a href="{{ url_for('dummy_data.add_dummy_data') }}"><button type="button" class="btn btn-sm btn-danger">Add Dummy Data</button></a></p>
+
 {% endblock content %}
