--- a/flask_task/static/main.css
+++ b/flask_task/static/main.css
@@ -78,3 +78,16 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
+.d-flex {
+  display: flex;
+}
+.spacer {
+  flex-grow: 1!important;
+}
+.d-inline-block {
+  display: inline-block;
+}
+.float-r {
+  float: right;
+}
