--- a/flask_task/templates/project.html
+++ b/flask_task/templates/project.html
@@ -18,8 +18,8 @@
     </div>
     <div>
         <h5 class="ml-2">Tasklist for {{ project.title }}:</h5>
-        <div>
-            <a class="btn btn-secondary btn-sm mt-0 mb-1 float-right" href="{{ url_for('tasks.add_task_to_current_project', project_id=project.id) }}">Add Task</a><br>
+        <div class="" style="text-align: right;">
+            <a class="btn btn-secondary btn-sm mt-0 mb-3" href="{{ url_for('tasks.add_task_to_current_project', project_id=project.id) }}">Add Task</a><br>
         </div>
         {% for task in tasks %}
             {% if task %}
