--- a/flask_task/templates/users.html
+++ b/flask_task/templates/users.html
@@ -22,7 +22,7 @@
                 <td>{{ user.id }}</td>
                 <td><a class="mr-2" href="{{ url_for('users.user_update', username=user.username) }}">{{ user.username }}</a></td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.roles.role }}</td>
+                <td>{{ user.role.role }}</td>
                 <td><a href="{{ url_for('users.user_update', username=user.username) }}"><button type="button" class="btn btn-sm ">Update</button></a>
                     <form style="display:inline" onclick="return confirm('Are you sure you want to delete this item?');" action="{{ url_for('users.delete_user', user_id=user.id) }}" method="POST">
                         <input type=hidden value="{{ user.id }}"name=user_id>
